--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,41 @@
 /*--------------------------------
        PAGE STYLES
 --------------------------------*/
+* {
+	box-sizing: border-box;
+}
 
 html {
 	height: 100%;
 }
+
 body {
 	height: 100%;
 	background: -webkit-linear-gradient(#C0E5E7, #6AC9CD);
 }
 
 /*--------------------------------
-          CENTER CIRCLE
+        TIC TAC TOE BOARD
+--------------------------------*/
+
+.tic-tac-toe-container {
+	margin-top: 40px;
+	height: 550px;
+}
+
+.game-square {
+	width: 28%;
+	height:  150px;
+	float: left;
+	background-color: rgba(255,255,255,0.8);
+	margin: 10px;
+	text-align: center;
+	font-size: 5em;
+	padding-top: 24px;
+}
+
+/*--------------------------------
+          PULSING CIRCLE
 --------------------------------*/
 
 #centercircle {
@@ -22,7 +46,7 @@ body {
 	border-radius: 50%;
 	position: absolute;
 	top: 20%;
-	left: 70%;
+	left: 80%;
 
 }
 
@@ -81,6 +105,7 @@ body {
 	left: 100%;
 	top: 200px;
 	-webkit-animation: swimleft 10s infinite;
+	z-index: -2;
 }
 
 #clownfish {
@@ -89,6 +114,7 @@ body {
 	left: -300px;
 	top: 400px;
 	-webkit-animation: swimright 15s infinite;
+	z-index: -3;
 }
 
 #mouth {
