--- a/css/style.css
+++ b/css/style.css
@@ -15,23 +15,94 @@ body {
 }
 
 /*--------------------------------
+         HEADER STYLES
+--------------------------------*/
+.game-title {
+	font-size: 2em;
+	text-align: center;
+	position: absolute;
+	left: 458px;
+	top: 20px;
+}
+
+.player-stats {
+	font-size: 1.3em;
+	text-align: center;
+	background-color: rgba(218,237,236,.6);
+	height: 140px;
+	width: 18%;
+	border-radius: 10%;
+	margin-top: 40px;
+	margin-left: 25px;
+	padding: 5px;
+	position: absolute;
+	line-height: .3;
+}
+.player-stats h1:nth-child(1) {
+	border-bottom: 3px solid #6AC9CD;
+	padding-top: 5px;
+	padding-bottom: 30px;
+}
+.player-stats:nth-child(2) {
+	clear: left;
+	margin-top: 200px;
+}
+
+/*--------------------------------
         TIC TAC TOE BOARD
 --------------------------------*/
 
 .tic-tac-toe-container {
-	margin-top: 40px;
-	height: 550px;
+	margin-top: 190px;
 }
 
 .game-square {
 	width: 28%;
-	height:  150px;
+	height:  110px;
 	float: left;
 	background-color: rgba(255,255,255,0.8);
 	margin: 10px;
 	text-align: center;
 	font-size: 5em;
-	padding-top: 24px;
+	padding-top: 4px;
+}
+
+/*--------------------------------
+         MODAL STYLES
+--------------------------------*/
+
+#overlay {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.5);
+	visibility: hidden;
+	position: absolute;
+	left: 0;
+	top: 0;
+	text-align: center;
+	z-index: 1000;
+}
+
+#modal {
+	width: 660px;
+	height: 400px;
+	margin: 180px auto;
+	background-color: white;
+	padding: 30px 10px;
+	text-align: center;
+	font-size: 1.5em;
+}
+
+#modal button {
+	background-color: #EF9D9C;
+	color: black;
+	padding: 10px;
+	width: 140px;
+	margin: 10px 30px;
+	font-size: 1.8em;
+	font-weight: bold;
+	border: 6px solid black;
+	border-radius: 5%;
 }
 
 /*--------------------------------
@@ -45,7 +116,7 @@ body {
 	background-color: #EF9D9C;
 	border-radius: 50%;
 	position: absolute;
-	top: 20%;
+	top: 60%;
 	left: 80%;
 
 }
