--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,38 @@ html {
 }
 
 body {
-	height: 100%;
 	background: -webkit-linear-gradient(#C0E5E7, #6AC9CD);
+}
+
+/*--------------------------------
+       INTRO PAGE STYLES
+--------------------------------*/
+
+.intro-div {
+	background-color: white;
+	font-size: 1.4em;
+	margin: 80px auto 0;
+	height: 150px;
+	width: 440px;
+	color: #B20072;
+	border-radius: 25px;
+	padding: 20px;
+	text-align: center;
+	box-shadow: 0 10px 0 #B9B9B9;
+}
+
+.intro-div:hover {
+	background-color: #F4F4F4;
+	box-shadow: 0 10px 0 darkgrey;
+}
+
+.new-game {
+	margin-top: 120px;
+
+}
+
+.join-game {
+	margin-bottom: -10px;
 }
 
 /*--------------------------------
@@ -23,14 +53,16 @@ body {
 	position: absolute;
 	left: 458px;
 	top: 20px;
+	font-family: 'Nunito', sans-serif;
+	color: #264949;
 }
 
 .player-stats {
 	font-size: 1.3em;
 	text-align: center;
-	background-color: rgba(218,237,236,.6);
+	background-color: rgba(218,237,236,.5);
 	height: 140px;
-	width: 18%;
+	width: 300px;
 	border-radius: 10%;
 	margin-top: 40px;
 	margin-left: 25px;
@@ -38,8 +70,17 @@ body {
 	position: absolute;
 	line-height: .3;
 }
+
+.active {
+	background-color: rgba(255,255,255,.8);
+}
+
+.player-stats h1 {
+	padding-left: 80px;
+		color: #264949;
+}
 .player-stats h1:nth-child(1) {
-	border-bottom: 3px solid #6AC9CD;
+	border-bottom: 3px solid rgba(106,201,205,.8);
 	padding-top: 5px;
 	padding-bottom: 30px;
 }
@@ -48,23 +89,48 @@ body {
 	margin-top: 200px;
 }
 
+.x-marker, .o-marker {
+	position: absolute;
+	top: 55px;
+	left: 14px;
+	z-index: -3;
+	font-size: 7em;
+}
+
 /*--------------------------------
         TIC TAC TOE BOARD
 --------------------------------*/
 
 .tic-tac-toe-container {
-	margin-top: 190px;
+	margin: 0 auto;
+	margin-top: 170px;
+	width: 42%;
 }
 
 .game-square {
 	width: 28%;
-	height:  110px;
+	height:  140px;
 	float: left;
 	background-color: rgba(255,255,255,0.8);
 	margin: 10px;
 	text-align: center;
-	font-size: 5em;
-	padding-top: 4px;
+	font-size: 7em;
+	line-height: 1.41;
+}
+
+/*--------------------------------
+         CHAT STYLES
+--------------------------------*/
+
+.chat {
+	height: 500px;
+	width: 250px;
+	background-color: rgba(218,237,236,.6);
+	border-radius: 25px;
+	position: absolute;
+	top: 100px;
+	right: 60px;
+
 }
 
 /*--------------------------------
@@ -91,6 +157,7 @@ body {
 	padding: 30px 10px;
 	text-align: center;
 	font-size: 1.5em;
+	border-radius: 25px;
 }
 
 #modal button {
@@ -101,8 +168,14 @@ body {
 	margin: 10px 30px;
 	font-size: 1.8em;
 	font-weight: bold;
-	border: 6px solid black;
-	border-radius: 5%;
+	border: none;
+	box-shadow: 0 7px 0px #5B5656;
+	border-radius: 25px;
+}
+
+#modal button:hover {
+	background-color: #CE8D8D;
+	box-shadow: 0 7px 0 #3F3D3D;
 }
 
 /*--------------------------------
@@ -117,7 +190,7 @@ body {
 	border-radius: 50%;
 	position: absolute;
 	top: 60%;
-	left: 80%;
+	right: 78%;
 
 }
 
@@ -144,24 +217,24 @@ body {
 	height: 20px;
 	width: 20px;
 	border-radius: 50%;
-	border: 2px solid black;
+	border: 2px solid white;
 	position: absolute;
 	bottom: 800px;
 	left: 20%;
-	-webkit-animation: bubbleup 10s ease infinite;
+	-webkit-animation: bubbleup 12s ease infinite;
 }
 
 
 #two {
-	left: 30%;
+	left: 33%;
 	height: 30px;
 	width: 30px;
-	-webkit-animation: bubbleup 6s ease infinite;
+	-webkit-animation: bubbleup 10s ease infinite;
 	-webkit-animation-delay: 1s;
 }
 
 #three {
-	left: 70%;
+	left: 88%;
 	-webkit-animation: bubbleup 8s ease infinite;
 	-webkit-animation-delay: .5s;
 }
@@ -174,17 +247,17 @@ body {
 	width: 100px;
 	position: absolute;
 	left: 100%;
-	top: 200px;
-	-webkit-animation: swimleft 10s infinite;
+	top: 120px;
+	-webkit-animation: swimleft 15s infinite;
 	z-index: -2;
 }
 
 #clownfish {
-	width: 170px;
+	width: 150px;
 	position: absolute;
 	left: -300px;
-	top: 400px;
-	-webkit-animation: swimright 15s infinite;
+	top: 490px;
+	-webkit-animation: swimright 20s infinite;
 	z-index: -3;
 }
 
@@ -192,4 +265,19 @@ body {
 	opacity: 0;
 	-webkit-animation: breathe 3s infinite;
 	fill: #2D212C;
+}
+
+#seahorse {
+	position: absolute;
+	width: 126px;
+	right: 260px;
+	top: 180px;
+	-webkit-transform: rotate(5deg);
+	-webkit-animation: sway 5s infinite;
+}
+
+
+#seahorse-eye-black {
+	-webkit-transform-origin: left;
+	-webkit-animation: blink 10s infinite;
 }
