--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,12 @@
 	box-sizing: border-box;
 }
 
-html {
-	height: 100%;
-}
-
 body {
-	background: -webkit-linear-gradient(#C0E5E7, #6AC9CD);
+	background: -webkit-linear-gradient(#C0E5E7, #6AC9CD) no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
 }
 
 /*--------------------------------
@@ -22,7 +22,7 @@ body {
 	font-size: 1.4em;
 	margin: 80px auto 0;
 	height: 150px;
-	width: 440px;
+	max-width: 440px;
 	font-family: 'Nunito', sans-serif;
 	color: #264949;
 	border-radius: 25px;
@@ -53,7 +53,7 @@ body {
 	background-color: white;
 	font-size: 1.35em;
 	margin: 80px auto 0;
-	height: 600px;
+	min-height: 600px;
 	width: 440px;
 	font-family: 'Nunito', sans-serif;
 	color: #264949;
@@ -78,17 +78,42 @@ body {
 	margin-bottom: 40px;
 }
 
+.game-list-item {
+	border: 2px solid grey;
+	width: 88%;
+	padding: 8px;
+	margin: 0 auto 20px;
+}
+
+.game-list-item:hover {
+	background-color: grey;
+	color: white;
+}
+
+.clickeditem {
+	background-color: grey;
+	color: white;
+}
+
 /*--------------------------------
          HEADER STYLES
 --------------------------------*/
 .game-title {
-	font-size: 2em;
+	font-size: 1.75em;
 	text-align: center;
 	position: absolute;
-	left: 458px;
-	top: 20px;
+	border-radius: 25px;
+	width: 45.7%;
+	top: 40px;
 	font-family: 'Nunito', sans-serif;
 	color: #264949;
+	margin-left: 460px; 
+	background-color: rgba(218,237,236,.5);
+	max-width: 580px;
+}
+
+.game-title h1 {
+	margin: 23px 0;
 }
 
 .player-stats {
@@ -98,20 +123,20 @@ body {
 	height: 140px;
 	width: 300px;
 	border-radius: 10%;
-	margin-top: 40px;
-	margin-left: 25px;
+	top: 35px;
+	margin-left: 70px;
 	padding: 5px;
 	position: absolute;
 	line-height: .3;
 }
 
 .active {
-	background-color: rgba(255,255,255,.8);
+	background-color: rgba(255,255,255,.7);
 }
 
 .player-stats h1 {
 	padding-left: 80px;
-		color: #264949;
+	color: #264949;
 }
 .player-stats h1:nth-child(1) {
 	border-bottom: 3px solid rgba(106,201,205,.8);
@@ -119,8 +144,8 @@ body {
 	padding-bottom: 30px;
 }
 .player-stats:nth-child(2) {
-	clear: left;
-	margin-top: 200px;
+
+	margin-top: 170px;
 }
 
 .x-marker, .o-marker {
@@ -137,16 +162,19 @@ body {
 
 .tic-tac-toe-container {
 	margin: 0 auto;
-	margin-top: 170px;
-	width: 42%;
+	margin-top: 190px;
+	margin-left: 450px; 
+	width: 47.5%;
+	max-width: 600px;
+	position: absolute;
 }
 
 .game-square {
-	width: 28%;
+	width: 30%;
 	height:  140px;
 	float: left;
-	background-color: rgba(255,255,255,0.8);
-	margin: 10px;
+	background-color: rgba(255,255,255,0.7);
+	margin: 1.5%;
 	text-align: center;
 	font-size: 7em;
 	line-height: 1.41;
@@ -175,7 +203,7 @@ body {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0,0,0,0.5);
-	visibility: hidden;
+/*	visibility: hidden;*/
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -212,6 +240,13 @@ body {
 	box-shadow: 0 7px 0 #3F3D3D;
 }
 
+
+
+.displaydiv {
+	visibility: visible; 
+}
+
+
 /*--------------------------------
           PULSING CIRCLE
 --------------------------------*/
@@ -223,8 +258,8 @@ body {
 	background-color: #EF9D9C;
 	border-radius: 50%;
 	position: absolute;
-	top: 60%;
-	right: 78%;
+	left: 90px;
+	top: 480px;
 
 }
 
@@ -250,12 +285,13 @@ body {
 .circle {
 	height: 20px;
 	width: 20px;
-	border-radius: 50%;
+	border-radius: 100%;
 	border: 2px solid white;
 	position: absolute;
 	bottom: 800px;
 	left: 15%;
-	-webkit-animation: bubbleup 12s ease infinite;
+	-webkit-animation: bubbleup 10s ease infinite;
+	z-index: -2;
 }
 
 
@@ -263,25 +299,47 @@ body {
 	left: 33%;
 	height: 30px;
 	width: 30px;
-	-webkit-animation: bubbleup 10s ease infinite;
-	-webkit-animation-delay: 1s;
+	-webkit-animation: bubbleup 8s ease infinite;
+	-webkit-animation-delay: 5s;
 }
 
 #three {
 	left: 88%;
-	-webkit-animation: bubbleup 8s ease infinite;
-	-webkit-animation-delay: .5s;
+	-webkit-animation: bubbleup 6s ease infinite;
+	-webkit-animation-delay: 2s;
 }
 
 #four {
 	left: 40%;
-	-webkit-animation: bubbleup 6s ease infinite;
-	-webkit-animation-delay: 3s;
+	-webkit-animation: bubbleup 11s ease infinite;
+	-webkit-animation-delay: 4s;
+	height: 30px;
+	width: 30px;
 }
 
 #five {
 	left: 60%;
-	-webkit-animation: bubbleup 10s ease infinite;
+	-webkit-animation: bubbleup 9s ease infinite;
+	-webkit-animation-delay: 2s;
+}
+
+#six {
+	left: 93%;
+	-webkit-animation: bubbleup 6s ease infinite;
+	-webkit-animation-delay: 3s;
+	height: 35px;
+	width: 35px;
+}
+
+#seven {
+	left: 75%;
+	-webkit-animation: bubbleup 14s ease infinite;
+	-webkit-animation-delay: 1s;
+}
+
+#eight {
+	left: 8%;
+	-webkit-animation: bubbleup 7s ease infinite;
 	-webkit-animation-delay: 4s;
 }
 /*--------------------------------
@@ -291,16 +349,28 @@ body {
 #fish {
 	width: 100px;
 	position: absolute;
-	left: 100%;
-	top: 120px;
-	-webkit-animation: swimleft 15s infinite;
+	right: -100px;
+	top: 80px;
+	-webkit-animation: swimleft 13s infinite;
+	-webkit-animation-delay: 4s;
 	z-index: -2;
+}
+
+#fish2 {
+	width: 160px;
+	position: absolute;
+	right: -200px;
+	top: 230px;
+	-webkit-animation: swimleft2 15s infinite;
+	-webkit-animation-delay: 6s;
+	z-index: -2;
+
 }
 
 #clownfish {
 	width: 150px;
 	position: absolute;
-	left: -300px;
+	left: -50px;
 	top: 490px;
 	-webkit-animation: swimright 20s infinite;
 	z-index: -3;
@@ -314,11 +384,12 @@ body {
 
 #seahorse {
 	position: absolute;
-	width: 126px;
-	right: 260px;
-	top: 180px;
+	width: 140px;
+	margin-left: 220px;
+	top: 330px;
 	-webkit-transform: rotate(5deg);
-	-webkit-animation: sway 5s infinite;
+	-webkit-animation: swaysmall 5s infinite;
+	
 }
 
 
