--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -1,3 +1,17 @@
+@media (max-width: 520px) {
+	.new-game-page-div {
+		margin: 50px auto;
+	}
+
+	.intro-div {
+		padding: 10px 18px 17px 18px;
+		background-color: rgba(255,255,255, .1);
+	}
+
+	.enter-name-page .new-game-page-div {
+		margin-top: 100px;
+	}
+}
 @media (min-width: 992px) {
 	body {
 		background: -webkit-linear-gradient(#901E86, #CC96D5) no-repeat center center fixed;
@@ -79,6 +93,12 @@
 		border-bottom: 5px solid black;
 	}
 
+	#modal {
+		max-width: 640px;
+	}
+	#modal-turn {
+		max-width: 560px;
+	}
 }
 
 @media (min-width: 1200px) {
