--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -1,30 +1,11 @@
-@media (max-width: 520px) {
-	.new-game-page-div {
-		margin: 50px auto;
-	}
-
-	.intro-div {
-		padding: 10px 18px 17px 18px;
-		background-color: rgba(255,255,255, .1);
-	}
-
-	.enter-name-page .new-game-page-div {
-		margin-top: 100px;
-	}
-}
 @media (min-width: 992px) {
 
 	.new-game-page-div {
-		width: 56%;
-		padding: 30px;
+		padding: 40px;
 	}
 
-	.new-game-page-div h1 {
-		margin-bottom: 20px;
-	}
-
-	.new-game-page-div h1:nth-child(3) {
-		margin-top: 50px;		
+	.enter-name-page .new-game-page-div {
+		padding: 60px;
 	}
 
 	button {
@@ -78,7 +59,7 @@
 	}
 
 	.tic-tac-toe-container {
-		top: 10px;
+		top: 5px;
 		width: 90%;
 	}
 
@@ -100,16 +81,12 @@
 
 @media (min-width: 1200px) {
 
-	.new-game-page-div {
-		width: 50%;
-	}
-
 	.player-stats {
 		display: block;
 		width: 20%;
 		height: 230px;
 		margin-left: 30px;
-		margin-top: 40px;
+		margin-top: 38px;
 		text-align: left;
 		padding-left: 30px;
 	}
@@ -129,8 +106,12 @@
 		left: -8px;
 	}
 	.game-title {
-		top: 20px;
+		top: 6px;
 		left: 300px;
+	}
+
+	.tic-tac-toe-container {
+		margin-top: -20px;
 	}
 
 	.game-title h1{
