--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
 	box-sizing: border-box;
 }
 
+html {
+	height: 100%;
+	width: 100%;
+}
+
 body {
   	text-align: center;
   	color: black;
@@ -12,7 +17,7 @@ body {
 	background: linear-gradient(180deg, #319399, #85dbdf, #cc96d5, #901e86, #2228a1, #7d81a5, #a65233, #DB3B00, #319399);
 	background-size: 1800% 1800%;
 	-webkit-animation: colorchange 180s ease infinite;
-	animation: colorchange 120s ease infinite;
+	animation: colorchange 180s ease infinite;
 }
 
 #docBody {
@@ -26,18 +31,19 @@ body {
 /*--------------------------------
        INTRO PAGE
 --------------------------------*/
+.first-page {
+	position: absolute;
+  	top: 45%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+}
 
 .intro-div {
 	border: 2px solid black;
-	width: 48%;
-	margin: 60px auto;
+	margin: 50px;
 	border-radius: 7px;
-	padding: 10px 20px 17px 20px;
+	padding: 16px 34px 24px 34px;
 	background-color: rgba(255,255,255, .1);
-}
-
-.intro-div:nth-child(1) {
-	margin-top: 140px;
 }
 
 .intro-div:hover {
@@ -53,13 +59,16 @@ body {
 /*--------------------------------
        NEW GAME PAGE
 --------------------------------*/
-
+.new-game-page {
+	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+}
 .new-game-page-div {
-	width: 80%;
-	margin: 100px auto;
+	min-width: 400px;
 	border: 4px solid black;
 	padding: 20px;
-
 }
 
 .new-game-page-div h1 {
@@ -67,10 +76,6 @@ body {
 	font-family: 'Alegreya Sans SC', sans-serif;
 	font-weight: 400;
 	letter-spacing: 3px;
-}
-
-.new-game-page-div h1:nth-child(3) {
-	margin-top: 40px;
 }
 
 button {
@@ -100,6 +105,13 @@ button:hover {
 /*--------------------------------
        JOIN GAME PAGE
 --------------------------------*/
+.select-game-page {
+	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+}
+
 .select-game-page .new-game-page-div {
 	padding: 20px;
 }
@@ -136,6 +148,13 @@ font-family: 'Lato', sans-serif;
 	background-color: rgba(255,255,255, .1);
 }
 
+.enter-name-page {
+	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+}
+
 .enter-name-page .new-game-page-div {
 	padding: 32px;
 }
@@ -157,7 +176,6 @@ font-family: 'Lato', sans-serif;
 /*--------------------------------
        HEADER STYLES
 --------------------------------*/
-
 
 .player-stats {
 	width: 46%;
@@ -235,10 +253,11 @@ font-family: 'Lato', sans-serif;
 	top: -90px;
 	width: 90%;
 	margin: 0 auto 250px;
+	height: 400px;
 }
 
 .game-square {
-	height: 140px;
+	height: 30%;
 	width: 33%;
 	float: left;
 	font-size: 7em;
@@ -247,7 +266,7 @@ font-family: 'Lato', sans-serif;
 
 .game-square p {
 	position: relative;
-	bottom: 5px;
+	bottom: 16px;
 }
 
 .game-square:nth-child(1), .game-square:nth-child(2), .game-square:nth-child(4), .game-square:nth-child(5), .game-square:nth-child(7),.game-square:nth-child(8) {
@@ -264,8 +283,8 @@ font-family: 'Lato', sans-serif;
 --------------------------------*/
 
 .overlay {
-	width: 150%;
-	height: 150%;
+	width: 100%;
+	height: 100%;
 	background-color: rgba(0,0,0,0.5);
 	position: absolute;
 	left: 0;
@@ -373,9 +392,9 @@ font-family: 'Lato', sans-serif;
 	border-radius: 100%;
 	border: 2px solid white;
 	position: absolute;
-	bottom: -400px;
 	z-index: -2;
 	background-color: white;
+	overflow: hidden;
 }
 
 /*--------------------------------
